# zhihurec

./: .env.example  .gitignore  README.md  docker-compose.kafka.yml  docker-compose.yml  project_brief.md  project_brief_zh.md  pyproject.toml
backend/: README.md  requirements-dev.txt  requirements.txt
docs/: api_contract.md  data_analysis_report.md  hci_report.md  local_runbook.md  metrics.md  migration_baseline.md  mind_data_inspection.md  resume_bullet.md  v1_api_contract.md  v1_local_runbook.md  v1_metrics.md  zhihurec_interview_questions.md
frontend/: README.md  app.js  index.html  styles.css
plan/: README.md  mind_migration_plan_zh.md  progress-checklist-2026-05-19-0834.md  project_brief_zh.md
product-frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: apply_demo_mysql.py  benchmark_mind_runtime.py  build_demo_fixture.py  build_demo_world.py  build_mind_demo_fixture.py  build_mind_demo_world.py  download_mind.py  eda.py  eval_mind_intent_mechanism.py  eval_offline_metrics.py  eval_replay_metrics.py  import_demo_world.py  init_local.ps1  init_local.sh  inspect_mind.py  inspect_zhihurec.py  mind_demo_pack.py  normalize_mind.py  replay_demo_events.py  report_mind_data.py  reset_demo_user.py  run_outbox_publisher.py  run_profile_consumer.py  smoke_local.py  train_als_recall.py  train_eval_mind.py  train_lgb_ranker.py
sql/: schema.sql  v1_schema.sql
tests/: conftest.py  test_als_recall.py  test_answer_card_route.py  test_article_card_route.py  test_compute_alpha.py  test_config.py  test_content_as_of_mysql.py  test_demo_fixture.py  test_download_mind.py  test_eval_scripts.py  test_evaluate.py  test_event_stream.py  test_event_track_route.py  test_health.py  test_health_mysql.py  test_inspect_mind.py  test_kafka_integration.py  test_mind_demo_world.py  test_mind_intent_mechanism.py  test_mysql_smoke.py  test_normalize_mind.py  test_outbox_mysql.py  test_personas_route.py  test_query_resolver.py  test_search_route.py  test_search_signal.py  (+8 more)
(+175 files in other folders)
